--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
     <!-- style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 
     <title>OECL</title>
   </head>
@@ -57,7 +58,7 @@
       </div>
     </header>
 
-    <section class="container mt-4">
+    <section class="container mt-4" data-aos="zoom-in">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -81,14 +82,35 @@
       </div>
     </section>
 
-    <section class="container-fluid p-0 py-3 mt-4 bg-custom-grey">
+    <section class="container-fluid p-0 py-3 mt-4 bg-custom-grey" >
       <div class="container">
-        <div class="owl-carousel owl-theme owl-1">
+        <div class="owl-carousel owl-theme owl-1" data-aos="zoom-in">
           <div class="item">
-            <img src="img/slide-1.png" alt="slide 2">
+            <div class="highlights">
+              <div class="hover-reveal">
+                <h5>Title Text</h5>
+                <p>Minim dolor consequat laboris eu labore consequat deserunt.</p>
+              </div>
+              <img src="img/slide-1.jpg" alt="slide 2">
+            </div>
           </div>
           <div class="item">
-            <img src="img/slide-1.png" alt="slide 2">
+            <div class="highlights">
+              <div class="hover-reveal">
+                <h5>Title Text</h5>
+                <p>Minim dolor consequat laboris eu labore consequat deserunt.</p>
+              </div>
+              <img src="img/slide-2.jpg" alt="slide 2">
+            </div>
+          </div>
+          <div class="item">
+            <div class="highlights">
+              <div class="hover-reveal">
+                <h5>Title Text</h5>
+                <p>Minim dolor consequat laboris eu labore consequat deserunt.</p>
+              </div>
+              <img src="img/slide-3.jpg" alt="slide 2">
+            </div>
           </div>
       </div>
       </div>
@@ -96,11 +118,11 @@
 
     <section class="container py-5">
       <div class="row">
-        <div class="col-md-6 text-center text-md-right">
+        <div class="col-md-6 text-center text-md-right" data-aos="fade-right">
           <h5>Lorem Ipsum</h5>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
         </div>
-        <div class="col-md-6 text-center text-md-left">
+        <div class="col-md-6 text-center text-md-left" data-aos="fade-left">
           <h5>Lorem Ipsum</h5>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
         </div>
@@ -112,12 +134,76 @@
         <h5>Our Services</h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <div class="owl-carousel owl-theme owl-2">
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
-          <div class="item"><img src="img/slide-2.png" alt="slide 2"></div>
+
+
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-1.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-2.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-3.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-4.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-5.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-light">
+              <div class="service-wrap">
+                <div class="s-content">
+                  <small>Consequat enim adipisicing sunt sit duis consectetur tempor id aute aliquip.</small>
+                </div>
+                <img src="img/slide-2-6.jpg" alt="slide 2">
+              </div>
+              <h5 class="mt-3">Service 1</h5>
+            </a>
+          </div>
+         
+
         </div>
       </div>
     </section>
@@ -126,13 +212,33 @@
       <h5>Blog Entries</h5>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-        <div class="owl-carousel owl-theme owl-1 p-2">
+        <div class="owl-carousel owl-theme owl-3 p-2">
+
           <div class="item">
-            <img src="img/slide-3.png" class="img-fluid mb-3" alt="slide 3">
-            <h5 class="mb-3">Lorem Ipsum</h5>
-            <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <button class="btn btn-primary btn-custom">Read More</button>
+            <div class="blog">
+              <img src="img/slide-3-1.jpg" class="img-fluid mb-3" alt="slide 3">
+              <h5 class="mb-3">Lorem Ipsum</h5>
+              <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="btn btn-primary btn-custom">Read More</a>
+            </div>
           </div>
+          <div class="item">
+            <div class="blog">
+              <img src="img/slide-3-2.jpg" class="img-fluid mb-3" alt="slide 3">
+              <h5 class="mb-3">Lorem Ipsum</h5>
+              <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="btn btn-primary btn-custom">Read More</a>
+            </div>
+          </div>
+          <div class="item">
+            <div class="blog">
+              <img src="img/slide-3-3.jpg" class="img-fluid mb-3" alt="slide 3">
+              <h5 class="mb-3">Lorem Ipsum</h5>
+              <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="btn btn-primary btn-custom">Read More</a>
+            </div>
+          </div>
+          
         </div>
     </section>
 
@@ -187,6 +293,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/94061ebfe0.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
