--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </header>
 
-    <section class="container mt-4" data-aos="zoom-in">
+    <section class="container mt-4" data-aos="zoom-out-left">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -84,7 +84,7 @@
 
     <section class="container-fluid p-0 py-3 mt-4 bg-custom-grey" >
       <div class="container">
-        <div class="owl-carousel owl-theme owl-1" data-aos="zoom-in">
+        <div class="owl-carousel owl-theme owl-1" data-aos="zoom-out-left">
           <div class="item">
             <div class="highlights">
               <div class="hover-reveal">
@@ -131,9 +131,9 @@
 
     <section class="container-fluid bg-custom-red p-0 py-5 text-light">
       <div class="container text-center">
-        <h5>Our Services</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <div class="owl-carousel owl-theme owl-2">
+        <h5 data-aos="zoom-out-left">Our Services</h5>
+        <p data-aos="zoom-out-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="owl-carousel owl-theme owl-2" data-aos="zoom-out-left">
 
 
           <div class="item">
