--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       </div>
     </section>
 
-    <section class="container text-center py-5">
+    <section class="container text-center py-5" data-aos="zoom-out-left">
       <h5>Blog Entries</h5>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
@@ -242,18 +242,18 @@
         </div>
     </section>
 
-    <section class="container-fluid p-0 py-5 text-center bg-custom-grey">
+    <section class="container-fluid p-0 py-5 text-center bg-custom-grey" >
       <div class="container">
-      <h2 class="mb-4">Talk To Us</h2>
-      <h6 class="mb-4">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin.
+      <h2 class="mb-4" data-aos="zoom-out-left">Talk To Us</h2>
+      <h6 class="mb-4" data-aos="zoom-out-left">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin.
         Cras feugiat hendrerit semper.</h6>
         <div class="row">
-          <div class="col-md-6 text-center text-md-right">
+          <div class="col-md-6 text-center text-md-right" data-aos="zoom-out-left">
             <p class="mt-3">Keep in touch
               110-220 Quisque diam odio, maximus ac consectetur eu, 10260
               auctor non lorem You are NOT allowed to re-distribute </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" data-aos="zoom-out-left">
             <form action="">
             <div class="row">
               <div class="col-sm-6 my-3">
