--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
     <section class="container-fluid bg-custom-red p-0 py-5 text-light">
       <div class="container text-center">
-        <h5 data-aos="zoom-out-left">Our Services</h5>
-        <p data-aos="zoom-out-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h5 data-aos="zoom-out-left" data-aos-delay="100">Our Services</h5>
+        <p data-aos="zoom-out-left" data-aos-delay="200">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <div class="owl-carousel owl-theme owl-2" data-aos="zoom-out-left">
 
 
@@ -208,11 +208,11 @@
       </div>
     </section>
 
-    <section class="container text-center py-5" data-aos="zoom-out-left">
-      <h5>Blog Entries</h5>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    <section class="container text-center py-5">
+      <h5 data-aos="zoom-out-left" data-aos-delay="100">Blog Entries</h5>
+      <p data-aos="zoom-out-left" data-aos-delay="200">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-        <div class="owl-carousel owl-theme owl-3 p-2">
+        <div class="owl-carousel owl-theme owl-3 p-2" data-aos="zoom-out-left" data-aos-delay="300">
 
           <div class="item">
             <div class="blog">
@@ -244,16 +244,16 @@
 
     <section class="container-fluid p-0 py-5 text-center bg-custom-grey" >
       <div class="container">
-      <h2 class="mb-4" data-aos="zoom-out-left">Talk To Us</h2>
-      <h6 class="mb-4" data-aos="zoom-out-left">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin.
+      <h2 class="mb-4" data-aos="zoom-out-left" data-aos-delay="100">Talk To Us</h2>
+      <h6 class="mb-4" data-aos="zoom-out-left" data-aos-delay="200">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin.
         Cras feugiat hendrerit semper.</h6>
         <div class="row">
-          <div class="col-md-6 text-center text-md-right" data-aos="zoom-out-left">
+          <div class="col-md-6 text-center text-md-right" data-aos="zoom-out-left" data-aos-delay="300">
             <p class="mt-3">Keep in touch
               110-220 Quisque diam odio, maximus ac consectetur eu, 10260
               auctor non lorem You are NOT allowed to re-distribute </p>
           </div>
-          <div class="col-md-6" data-aos="zoom-out-left">
+          <div class="col-md-6 aos-anchor" data-aos="zoom-out-left" data-aos-delay="400">
             <form action="">
             <div class="row">
               <div class="col-sm-6 my-3">
@@ -277,10 +277,10 @@
 
     <footer class="bg-custom-red text-center py-4">
         <ul class="navbar nav justify-content-center">
-          <li><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-twitter"></i></a></li>
+          <li data-aos="zoom-out-left" data-aos-delay="500" data-aos-anchor=".aos-anchor"><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-facebook-f"></i></a></li>
+          <li data-aos="zoom-out-left" data-aos-delay="600" data-aos-anchor=".aos-anchor"><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-instagram"></i></a></li>
+          <li data-aos="zoom-out-left" data-aos-delay="700" data-aos-anchor=".aos-anchor"><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-linkedin-in"></i></a></li>
+          <li data-aos="zoom-out-left" data-aos-delay="800" data-aos-anchor=".aos-anchor"><a href="#" target="_blank" rel="noopener noreferrer" class="rounded-circle bg-light d-flex align-items-center justify-content-center"><i class="fab fa-twitter"></i></a></li>
         </ul>
     </footer>
 
